General UI improvements

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+    <link href="https://assets.website-files.com/5e7a1f9f5d22ab1757079a58/5e7a1f9f5d22ab96aa079ae6_favicon32x32.jpg" rel="shortcut icon" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
